<resources>
    <string name="app_name">Manage</string>
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>
    <string name="home">Home</string>
    <string name="nav_item_title">●</string>
    <string name="overview">Overview</string>
    <string name="total_balance">Total Balance</string>
    <string name="view_card_details">Cards</string>
    <string name="monthly_balance">Monthly Balance</string>
    <string name="view_all_transactions">Transactions</string>
    <string name="no_transactions_added">No Transactions Added</string>
    <string name="get_started">Get Started</string>
    <string name="no_cards_added">No Cards Added</string>
    <string name="rupee_symbol">₹</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="done">Done</string>
    <string name="_1_60_197_115">1,60,197.115</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="category_icon">Category Icon</string>
    <string name="payment_to_john_doe">Payment to John Doe</string>
    <string name="insert_location">Insert Location</string>
    <string name="insert_notes_here">Insert Notes here</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="empty_amount_string">--</string>
    <string name="thank_you">Thank You</string>
    <string name="i_m_so_happy_to_hear_that_you_love_manage_it_d_be_really_great_if_you_rated_this_application_thank_you_so_much_for_your_support">I\'m so happy to hear that you love Manage! It\'d be really great if you rated this application. Thank you so much for your support.</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="yeah_sure">Yeah, Sure</string>
    <string name="credit_card_chip">Credit Card Chip</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="we_do_not_share_your_details_with_anyone_else">We do not share your details with anyone else.</string>
    <string name="valid_thru">Valid Thru</string>
    <string name="name_of_the_bank">Name of the Bank</string>
    <string name="please_select_card_type">Please select card type.</string>
    <string name="you_have_spent_more_than_80_of_your_income">You have spent more than 80% of your income!</string>
    <string name="one_touch_authentication">One-touch Authentication</string>
    <string name="please_place_your_fingertip_on_the_scanner_to_verify_your_identity">Please place your fingertip on the scanner to verify your identity.</string>
    <string name="why_fingerprint_explaination">Fingerprint authentication takes care of the user\'s data privacy. Your device should have atleast one fingerprint registered in the device settings.</string>
</resources>
